# helpdeskpro

./: .gitignore  README.md  env.example  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: build-and-release.yml
backend/: env.example  package.json  pnpm-lock.yaml  railway.env.example  railway.json
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.service.ts
backend/src/entities/: remote-session.entity.ts  ticket-message.entity.ts  ticket.entity.ts  user.entity.ts
backend/src/guards/: jwt-auth.guard.ts
backend/src/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/modules/auth/strategies/: google.strategy.ts  (+1 more)
backend/src/modules/remote/: remote.controller.ts  remote.module.ts  remote.service.ts
backend/src/modules/tickets/: tickets.controller.ts  tickets.module.ts  tickets.service.ts
backend/src/modules/users/: users.controller.ts  users.module.ts  users.service.ts
backend/src/scripts/: create-admin.ts  create-default-admin.ts
backend/src/seeds/: seed.ts
backend/src/users/: users.controller.ts  users.service.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Layout.tsx  RoleGuard.tsx
src/components/RemoteControl/: RemoteAdmin.tsx  RemoteClient.tsx  index.ts
src/contexts/: AuthContext.tsx
src/hooks/: usePermissions.ts
src/pages/: CreateTicketPage.tsx  DashboardPage.tsx  LoginPage.tsx  TicketDetailPage.tsx  TicketsPage.tsx
src/services/: authService.ts  authService.tsx  remoteControlService.ts  remoteService.ts  ticketService.ts
src/types/: index.ts
(+4 files in other folders)
